# CSCI-576-starter-code

./: .gitignore  README.md
ImageDisplay/: README.txt
ImageDisplay/dependency/wxWidgets/src/stc/scintilla/src/: RESearch.cxx
ImageDisplay/src/: Main.cpp
ImageDisplay_C++/: Image.cpp  Image.vcxproj.filters  Main.cpp  ReadMe-C++.md
ImageDisplay_C++_cross_platform/: CMakeLists.txt  README.txt
ImageDisplay_C++_cross_platform/dependency/wxWidgets/src/stc/lexilla/lexers/: LexX12.cxx
ImageDisplay_C++_cross_platform/dependency/wxWidgets/src/stc/scintilla/src/: CellBuffer.cxx
ImageDisplay_C++_cross_platform/src/: Main.cpp
ImageDisplay_C++_windows/: Image.h  Image.sln  Image.vcxproj  Main.cpp  ReadMe.md
ImageDisplay_Java/: ImageDisplay.java  ReadMe-Java.txt  ReadMe.txt
ImageDisplay_Java/ImageDisplay_Java/: ImageDisplay.java
